# aiida-opsp

./: .gitignore  LICENSE  README.md  example_ga.py  genetic.pkl  mkdocs.yml  parse_oncv_upy.py  pyproject.toml  setup.cfg  setup.py  test-demo.py  test-gaussian.py
.docker/: Dockerfile  docker-bake.hcl  docker-compose.aiida-opsp.yml
.docker/scripts/: 60-code-setup.sh
.docker/tests/: conftest.py  test_aiida.py
.github/workflows/: docker.yml
aiida_opsp/: __init__.py  calcjob.py  parser.py  workflow.py
aiida_opsp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aiida_opsp/utils/: __init__.py  merge_input.py
aiida_opsp/workflows/: __init__.py  ga.py  individual.py  ls.py  psp_oncv.py
aiida_opsp/workflows/verify/: sssp.py
docs/: index.md  requirements.txt  tutorial.md
examples/: check_abi.py  dummy.py  example_ga.py  example_ga_ga_d_8_params.py  example_ga_li_low_4_params.py  example_ga_li_low_6_params.py  example_ga_li_s_6_params.py  example_gals_ga_mixed_params.py  example_gals_li_low_mixed_params.py  example_gals_li_low_nlcc_opt.py  example_launch_oncvpsp_ga.py  example_launch_ovcvpsp.py  example_ls_li_low_4_params.py  generate_individual_workflow.py  genetic_workflow.py  individual_workflow.py  input_prepare_run.ipynb  nelder-mead-workflow.py  plot-li-p-rc-qcut-grid-20x20.ipynb  plot-li-s-rc-qcut-grid-20x20.ipynb  plot-rc-qcut-grid-20x10.ipynb  plot-rc-qcut-grid-20x20.ipynb  rc_qcut_test.ipynb  rc_qcut_test_ga_d.ipynb  rc_qcut_test_li_p.ipynb  run_verify_sssp.py
examples/ga-ref/: example_launch_oncvpsp_ga_d.py  example_launch_oncvpsp_ga_low.py  example_launch_oncvpsp_ga_spd.py
examples/submit_test/20220304-00001/: _aiidasubmit.sh  aiida.in
examples/submit_test/20220304-00001/.aiida/: calcinfo.json  job_tmpl.json
setup-yaml/: computer-setup-dockerhost.yaml  computer-setup.yaml  docker-test.yaml  oncv-dockerhost.yaml  oncv.yaml
test_old/: conftest.py  test_psp_calcjob.py  test_psp_parser.py
test_old/parsers/fixtures/oncv/default/: aiida.out
test_old/parsers/fixtures/oncv/warning_lschvkbb_not_converge/: aiida.out
test_old/test_psp_calcjob/: test_oncv_default.in  test_oncv_with_test_configurations.in
test_old/test_psp_parser/: test_oncv_default.yml
tests/: conftest.py  test_individual.py  test_psp_parser.py  test_simplex.py  test_utils.py
tests/parsers/fixtures/oncv/error_lschvkbb/: aiida.out
tests/parsers/fixtures/oncv/pspot_has_node/: aiida.out
tests/test_individual/: test_crossover_individual_1_.yml  test_crossover_individual_2_.yml  test_crossover_individual_3_.yml  test_crossover_individual_4_.yml  test_generate_random_individual.yml  test_generate_random_individual_0_.yml  test_generate_random_individual_2_.yml  test_generate_random_individual_3_.yml  test_generate_random_individual_4_.yml  test_mutata_inddividual.yml  test_mutate_individual_0_.yml  test_mutate_individual_1_.yml  test_mutate_individual_2_.yml  test_mutate_individual_3_.yml  test_mutate_individual_4_.yml
tests/test_psp_parser/: test_oncv_default.yml  test_oncv_error_pspot_has_node.yml  test_oncv_warning_test_lschvkbb.yml
tests/test_simplex/: test_create_random_simplex_0_.yml  test_create_random_simplex_1_.yml  test_create_random_simplex_2_.yml  test_create_random_simplex_3_.yml  test_create_random_simplex_4_.yml
tests/test_utils/: test_individual_to_inputs.yml
