[metadata]
name = aiida-opsp
version = 22.3.0
description = The AiiDA plugin for optimize psp EA search
long_description = file: README.md
long_description_content_type = text/markdown
author = Jusong Yu
author_email = jusong.yu@psi.ch
license = MIT
license_file = LICENSE
classifiers = 
    Framework :: AiiDA
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
install_requires =
    aiida-core[atomic_tools]~=2.4.0
    aiida-optimize~=1.0
    aiida-pseudo~=1.0
    abipy~=0.9.3
    pymatgen~=2023.3.23
    numpy~=1.22
python_requires = >=3.8
include_package_data = True

[options.entry_points]
aiida.calculations =
    opsp.pseudo.oncvpsp = aiida_opsp.calcjob:OncvPseudoCalculation
aiida.parsers = 
    opsp.pseudo.oncvpsp = aiida_opsp.parser:OncvPseudoParser
aiida.workflows = 
    opsp.pseudo.oncvpsp = aiida_opsp.workflows.psp_oncv:OncvPseudoBaseWorkChain
    opsp.optimize.nelder_mead = aiida_opsp.workflows.ls:NelderMeadWorkChain

[options.packages.find]
exclude = tests, docs

[options.extras_require]
dev =
    bumpver==2021.1114
    pre-commit==2.11.1
tests =
    pgtest~=1.3
    pytest~=6.0
    pytest-regressions~=2.3

[options.package_data]
aiida_opsp.statics = configurations/*.dat, test_configurations/*.dat

[flake8]
ignore =
    E501  # Line length handled by black.
    W503  # Line break before binary operator, preferred formatting for black.
    E203  # Whitespace before ':', preferred formatting for black.

[bumpver]
current_version = "v22.03.0"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
aiida_opsp/version.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}